fix alignment of tagline

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -43,7 +43,7 @@ nav#menu {
 #page_container > header #tagline {
   position: absolute;
   right: 40px;
-  top: 70px;
+  top: 65px;
 }
 
 #page_container > header #tagline, #page_container > header #tagline * {
